basic layout is clean and ready to start

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Welcome#index</h1>
+<h1>Uber Status</h1>
+<h2>The Status tracker for PMs at Enterprises</h2>
+<p>This application will help you track status for your projects with minimal intervention from your side.</p>
+
 <p>Find me in app/views/welcome/index.html.erb</p>
