Added footer into a container so that it aligns with rest of page.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,7 +65,9 @@
       </div><!--/row-->
 
       <footer class="navbar navbar-default navbar-fixed-bottom">
-        <p>&copy; Company 2015</p>
+        <div class="container">
+            <p>&copy; Company 2015</p>
+        </div>
       </footer>
 
     </div> <!-- /container -->
