Added fixed nav bar using rails helper with bootstrap.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,23 +38,13 @@
   </head>
   <body>
 
-    <div class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">UberStatus</a>
-        <div class="navbar-collapse collapse navbar-responsive-collapse">
-          <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
-            <li><%= link_to "Link2", "/path2"  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
-          </ul>
-        </div>
-      </div>
-    </div>
+      <%= nav_bar fixed: :top, brand: "Uber Status", responsive: true do  %>
+      <%= menu_group do %>
+        <%= menu_divider %>
+        <%= menu_item "Contact Us", "#" %>
+      <% end %>
+    <% end %>
+
 
     <div class="container">
       <div class="row">
