--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "Home") %>
 <h1>Uber Status</h1>
 <h2>The Status tracker for PMs at Enterprises</h2>
 <p>This application will help you track status for your projects with minimal intervention from your side.</p>
