added project new controller, no model yet

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
       <%= nav_bar fixed: :top, brand: "Uber Status", responsive: true do  %>
       <%= menu_group do %>
         <%= menu_divider %>
-        <%= menu_item "Contact Us", welcome_contact_us_path %>
+        <%= menu_item "Contact Us", contact_path %>
       <% end %>
     <% end %>
 
