--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,6 +57,7 @@
       <footer class="navbar navbar-default navbar-fixed-bottom">
         <div class="container">
             <p>&copy; Company 2015</p>
+            <%= debug(params) if Rails.env.development? %>
         </div>
       </footer>
 
