partial view of project was modified to include additional fields

--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,4 +1,5 @@
 <li id="project-<%= project.id %>">
   <%= link_to project.name, project %>
   <span class="project-name"><%= project.name %></span>
+  <%= tag_label("Tracked "+time_ago_in_words(project.created_at)+" ago.",:success) %>
 </li>
