added title and h1 tags to project views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,8 @@
       <%= menu_group do %>
         <%= menu_divider %>
         <%= menu_item "Contact Us", contact_path %>
+        <%= menu_divider %>
+        <%= menu_item "Projects", projects_path %>
       <% end %>
     <% end %>
 
