--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,1 +1,3 @@
+<% provide(:title, @project.name + "(" + @project.project_number_str + ")") %>
+<h1>Project Setting</h1>
 <%= @project.name %>, <%= @project.project_number_str %>
